# mimir-worker-k8s-operator

./: .gitignore  Makefile  SECURITY.md  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  testing.py  tox.ini
.github/workflows/: pull-request.yaml
lib/charms/loki_k8s/v1/: loki_push_api.py
lib/charms/mimir_coordinator_k8s/v0/: mimir_cluster.py
src/: charm.py  mimir_cluster.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
terraform/tests/: integrated.tftest.hcl  isolated.tftest.hcl
terraform/tests/minimal/: main.tf
terraform/tests/setup/: main.tf
tests/integration/: conftest.py  helpers.py  test_charm_ha.py  test_charm_ha_scaled.py  test_charm_monolithic.py  test_workload_tracing.py
tests/scenario/: test_deploy.py
tests/unit/: test_charm.py  test_empty.py
