[project]
name = "mimir-worker-k8s"
version = "0.1"  # this is in fact irrelevant
requires-python = ">=3.12"

dependencies = [
    "ops>=1.5.0",
    # Charm relation interfaces
    "pydantic",
    
    # ---PYDEPS---
    "cosl>=0.0.43",
    # lib/charms/tempo_coordinator_k8s/v0/charm_tracing.py
    "opentelemetry-exporter-otlp-proto-http==1.21.0",
]

[project.optional-dependencies]
lint = [
    "ruff",
    "codespell",
]
fmt = ["ruff"]
static = ["pyright"]
unit = [
    "pytest",
    "coverage[toml]",
]
scenario = []
integration = [
    "pytest",
    "minio",
    "tenacity",
    "juju",
    "pytest-operator",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"
markers = [
  'setup: marks tests as setup (deselect with -m "not setup")'
]

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
  "D105",  # Missing docstring in magic method
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
]
ignore = ["E501", "D107"]
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src"]
extraPaths = ["lib"]
pythonVersion = "3.8"
pythonPlatform = "Linux"
